fixed website layout not appearing right on smaller screens and added a wager funtion with buttons to bet money, cant bet below zero and cant go above current money

--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
+html {
+    /* height: 100%; */
+    height: 100%;
+    max-height: 100vh;
+}
+
 body {
     margin: 0 auto;
     background: linear-gradient(270deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+    height: 100%;
+    /* height: 100vh; */
+}
+
+.gameBoard {
+    height: 100%;
     
+        
 }
 
 .title {
@@ -19,7 +32,7 @@ body {
 .indexTitle {
     height: 40%;
     width: 100%;
-    background: linear-gradient(270deg, rgb(132, 55, 183) 0%, rgb(202, 51, 51) 50%, rgb(233, 165, 69) 100%);
+    /* background: linear-gradient(270deg, rgb(132, 55, 183) 0%, rgb(202, 51, 51) 50%, rgb(233, 165, 69) 100%); */
     text-align: center;
     font-size: 80px;
 }
@@ -47,8 +60,9 @@ body {
 
 .dealer {
     width: 100vw;
-    height: 200px;
-    background: linear-gradient(90deg, rgba(138,0,137,1) 27%, rgba(250,83,0,1) 53%, rgba(0,0,0,1) 100%);    display: flex;
+    height: 15vh;
+    /* background: linear-gradient(90deg, rgba(138,0,137,1) 27%, rgba(250,83,0,1) 53%, rgba(0,0,0,1) 100%); */
+    display: flex;
 
 }
 
@@ -67,8 +81,10 @@ body {
 
 .table {
     width: 100%;
-    height: 67vh;
-    background: linear-gradient(90deg, rgba(138,0,137,1) 27%, rgba(250,83,0,1) 53%, rgba(0,0,0,1) 100%);    display: flex;
+    height: 69%;
+    /* background: linear-gradient(90deg, rgba(138,0,137,1) 27%, rgba(250,83,0,1) 53%, rgba(0,0,0,1) 100%)no-repeat center center fixed; */
+    background-size: cover;    
+    display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -92,6 +108,7 @@ body {
     width: 50%;
     display: flex;
     float: left;
+    margin-right: 80px;
 }
 
 .lower button {
@@ -104,9 +121,11 @@ body {
 
 .player {
     width: 100%;
-    height: 200px;
+    height: 10.9em;
     background-color: rgb(0,0,0);
     display: flex;
+    position: fixed;
+    bottom: 0;
 
 }
 
@@ -116,13 +135,14 @@ body {
 }
 
 .dealBtn, .stayBtn, .resetBtn {
-    width: 200px;
-    height: 200px;
+    width: 15rem;
+    height: 100%;
     border: 1.5px solid #ffffff;
     border-radius: 20px;
     color: wheat;
     background-color: transparent;
     transition: 1s;
+    
 
 }
 
@@ -138,9 +158,6 @@ body {
     background-color: rgb(233, 165, 69);
 }
 
-.announcer {
-    
-}
 
 .gameOff {
     display: none;
@@ -160,14 +177,10 @@ body {
     padding: 122px 0 0;
     background: rgb(5, 18, 18);
     box-shadow: -15px 0 50px #000;
-
-
     text-align: center;
     font-family: fantasy;
     color: rgb(218, 120, 55);
     font-size: large;
-
-
     transition: transform 0.5s ease;
 }
 
@@ -216,7 +229,8 @@ h2.playerName {
 .hidden {
     width: 150px;
     height: 150px;
-    background: linear-gradient(270deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+    background: linear-gradient(111deg, rgba(131,58,180,1) 27%, rgba(253,29,29,1) 53%, rgba(252,176,69,1) 100%);
+
     background-size: cover;
     padding: 122px 0 0;
     border-radius: 15px;
@@ -234,3 +248,6 @@ h2.playerName {
 
 }
 
+.wagerBlock {
+    cursor: not-allowed;
+}
